# brain-games

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint-check.yml
brain_games/: cli.py  game_logic.py
brain_games/games/: BRAIN_GAMES.py  brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: 1.py  BRAIN_GAMES.py  brain-games.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  games.py
