[tool.poetry]
name = "Brain-Games"
version = "0.1.0"
description = 'My first project. These are 5 games under the main name "Brain-Games"'
authors = ["a.ch3re359@yandex.ru"]
repository = 'https://github.com/seeu359/python-project-lvl1'
classifiers = [' What is it?']
packages = [
  { include = "brain_games" },
  ]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games ="brain_games.games.BRAIN_GAMES:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
